Removing the Jumbtron header classes and editing the h1 class

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
           <div class="container">
             <div class="row">
               <div class="col-md-6">
-                <h1 class="display-4">Simulated Paging System</h1>
+                <h1>Simulated Paging System</h1>
                 <p class="lead">Test</p>
                 <a href="#" class="btn btn-primary btn-lg">Call to action!</a>
               </div>
