--- a/index.html
+++ b/index.html
@@ -56,8 +56,18 @@
             <div class="row">
               <div class="col-md-6">
                 <h1>Simulated Paging System</h1>
-                <p class="lead">Test</p>
+                <p class="lead">This programming assignment was designed primarily to improve my understanding of memory allocation protocols, operating system kernel data structures, and memory management hardware.  It also incorporates an additional element of modern operating systems: user-interface design and graphical display.</p>
                 <a href="#" class="btn btn-primary btn-lg">Call to action!</a>
+              </div>
+              <div class="col-md-6">
+                <table class="table-striped table-condensed">
+                  <tr>
+                    <th>Frame #</th>
+                    <th>Proc ID</th>
+                    <th>Segment</th>
+                    <th>Page #</th>
+                  </tr>
+                </table>
               </div>
             </div>
           </div>
