--- a/index.html
+++ b/index.html
@@ -60,12 +60,18 @@
                 <a href="#" class="btn btn-primary btn-lg">Call to action!</a>
               </div>
               <div class="col-md-6">
-                <table class="table-striped table-condensed">
+                <table class="table table-condensed">
                   <tr>
                     <th>Frame #</th>
                     <th>Proc ID</th>
                     <th>Segment</th>
                     <th>Page #</th>
+                  </tr>
+                  <tr>
+                    <td>1</td>
+                    <td>7</td>
+                    <td>Text</td>
+                    <td>4</td>
                   </tr>
                 </table>
               </div>
