--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
 
     <!-- Custom styles for this template -->
     <link href="css/heroic-features.css" rel="stylesheet">
-
+    <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/smoothness/jquery-ui.css">
+ 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
   </head>
 
   <body>
@@ -54,12 +56,12 @@
         <header class="jumbotron my-4">
           <div class="container">
             <div class="row">
-              <div class="col-md-6">
+              <div class="col-md-12" id="jumbotron_title">
                 <h1>Simulated Paging System</h1>
                 <p class="lead">This programming assignment was designed primarily to improve my understanding of memory allocation protocols, operating system kernel data structures, and memory management hardware.  It also incorporates an additional element of modern operating systems: user-interface design and graphical display.</p>
-                <a href="#" class="btn btn-primary btn-lg">Call to action!</a>
+                <a href="#" class="btn btn-primary btn-lg" id="start_btn">Call to action!</a>
               </div>
-              <div class="col-md-6">
+              <div class="col-md-0" id="memory_table">
                 <table class="table table-condensed">
                   <tr>
                     <th>Frame #</th>
@@ -149,9 +151,9 @@
     </footer>
 
     <!-- Bootstrap core JavaScript -->
-    <script src="vendor/jquery/jquery.min.js"></script>
+    <!--<script src="vendor/jquery/jquery.min.js"></script>-->
     <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-
+    <script src="js/controller.js"></script>
   </body>
 
 </html>
