--- a/index.html
+++ b/index.html
@@ -62,69 +62,76 @@
                 <label class="btn btn-primary btn-lg btn-file" style="margin-bottom:0px;">
                   Browse <input type="file" style="display: none;" id="file_btn">
                 </label>
-                <button class="btn btn-primary btn-lg btn-default" id="start_btn" disabled>
+                <button class="btn btn-primary btn-lg btn-default" id="start_btn">
                   Upload
                 </button>
-                <button class="btn btn-success btn-lg btn-default" id="next_btn" disabled>
-                  Next
+                <button class="btn btn-success btn-lg btn-default" id="next_btn">
+                  Start
+                </button>
+                <button class="btn btn-danger btn-lg btn-default" id="restart_btn">
+                  Restart
                 </button>
               </div>
               <div class="col-md-0" id="memory_table">
                 <table class="table">
-                  <tr>
-                    <th>Frame #</th>
-                    <th>Proc ID</th>
-                    <th>Segment</th>
-                    <th>Page #</th>
-                  </tr>
-                  <tr free="true">
-                    <td>0</td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                  </tr>
-                  <tr>
-                    <td>1</td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                  </tr>
-                  <tr>
-                    <td>2</td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                  </tr>
-                  <tr>
-                    <td>3</td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                  </tr>
-                  <tr>
-                    <td>4</td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                  </tr>
-                  <tr>
-                    <td>5</td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                  </tr>
-                  <tr>
-                    <td>6</td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                  </tr>
-                  <tr>
-                    <td>7</td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                  </tr>
+                  <thead>
+                    <tr>
+                      <th>Frame #</th>
+                      <th>Proc ID</th>
+                      <th>Segment</th>
+                      <th>Page #</th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    <tr data-free-frame="true">
+                      <td data-frame-number="0">0</td>
+                      <td data-value="procId"></td>
+                      <td data-value="segment"></td>
+                      <td data-value="pageNum"></td>
+                    </tr>
+                    <tr data-free-frame="true">
+                      <td data-frame-number="1">1</td>
+                      <td data-value="procId"></td>
+                      <td data-value="segment"></td>
+                      <td data-value="pageNum"></td>
+                    </tr>
+                    <tr data-free-frame="true">
+                      <td data-frame-number="2">2</td>
+                      <td data-value="procId"></td>
+                      <td data-value="segment"></td>
+                      <td data-value="pageNum"></td>
+                    </tr>
+                    <tr data-free-frame="true">
+                      <td data-frame-number="3">3</td>
+                      <td data-value="procId"></td>
+                      <td data-value="segment"></td>
+                      <td data-value="pageNum"></td>
+                    </tr>
+                    <tr data-free-frame="true">
+                      <td data-frame-number="4">4</td>
+                      <td data-value="procId"></td>
+                      <td data-value="segment"></td>
+                      <td data-value="pageNum"></td>
+                    </tr>
+                    <tr data-free-frame="true">
+                      <td data-frame-number="5">5</td>
+                      <td data-value="procId"></td>
+                      <td data-value="segment"></td>
+                      <td data-value="pageNum"></td>
+                    </tr>
+                    <tr data-free-frame="true">
+                      <td data-frame-number="6">6</td>
+                      <td data-value="procId"></td>
+                      <td data-value="segment"></td>
+                      <td data-value="pageNum"></td>
+                    </tr>
+                    <tr data-free-frame="true">
+                      <td data-frame-number="7">7</td>
+                      <td data-value="procId"></td>
+                      <td data-value="segment"></td>
+                      <td data-value="pageNum"></td>
+                    </tr>
+                  </tbody>
                 </table>
               </div>
             </div>
@@ -133,54 +140,8 @@
               
             
       <!-- Page Features -->
-      <div class="row text-center">
-        <div class="col-lg-3 col-md-6 mb-4">
-          <div class="card">
-            <div class="card-body">
-              <h4 class="card-title">Card title</h4>
-              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente esse necessitatibus neque.</p>
-            </div>
-            <div class="card-footer">
-              <a href="#" class="btn btn-primary">Find Out More!</a>
-            </div>
-          </div>
-        </div>
+      <div class="row text-center" id="card-container">
 
-        <div class="col-lg-3 col-md-6 mb-4">
-          <div class="card">
-            <div class="card-body">
-              <h4 class="card-title">Card title</h4>
-              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo magni sapiente, tempore debitis beatae culpa natus architecto.</p>
-            </div>
-            <div class="card-footer">
-              <a href="#" class="btn btn-primary">Find Out More!</a>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-lg-3 col-md-6 mb-4">
-          <div class="card">
-            <div class="card-body">
-              <h4 class="card-title">Card title</h4>
-              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente esse necessitatibus neque.</p>
-            </div>
-            <div class="card-footer">
-              <a href="#" class="btn btn-primary">Find Out More!</a>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-lg-3 col-md-6 mb-4">
-          <div class="card">
-            <div class="card-body">
-              <h4 class="card-title">Card title</h4>
-              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo magni sapiente, tempore debitis beatae culpa natus architecto.</p>
-            </div>
-            <div class="card-footer">
-              <a href="#" class="btn btn-primary">Find Out More!</a>
-            </div>
-          </div>
-        </div>
       </div>
       <!-- /.row -->
 
