--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Heroic Features - Start Bootstrap Template</title>
+    <title>Paging Simulator</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -25,7 +25,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
       <div class="container">
-        <a class="navbar-brand" href="#">Start Bootstrap</a>
+        <a class="navbar-brand" href="#">Paging Simulator</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -59,18 +59,17 @@
               <div class="col-md-12" id="jumbotron_title">
                 <h1>Simulated Paging System</h1>
                 <p class="lead">This programming assignment was designed primarily to improve my understanding of memory allocation protocols, operating system kernel data structures, and memory management hardware.  It also incorporates an additional element of modern operating systems: user-interface design and graphical display.</p>
-                <label class="btn btn-primary btn-lg btn-file" style="margin-bottom:0px;">
-                  Browse <input type="file" style="display: none;" id="file_btn">
-                </label>
-                <button class="btn btn-primary btn-lg btn-default" id="start_btn">
-                  Upload
-                </button>
-                <button class="btn btn-success btn-lg btn-default" id="next_btn">
-                  Start
-                </button>
-                <button class="btn btn-danger btn-lg btn-default" id="restart_btn">
-                  Restart
-                </button>
+                <div class="container">
+                  <label class="btn btn-primary btn-lg btn-file" style="margin-bottom:0px;">
+                    Open... <input type="file" style="display: none;" id="file_btn">
+                  </label>
+                  <button class="btn btn-success btn-lg btn-default" id="next_btn">
+                    Start
+                  </button>
+                  <button class="btn btn-danger btn-lg btn-default" id="restart_btn">
+                    Restart
+                  </button>
+                </div>
               </div>
               <div class="col-md-0" id="memory_table">
                 <table class="table">
